<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="your_media_is_empty">Ваша медиатека пуста</string>
    <string name="there_are_no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks_tab">Избранные треки</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="settings_button">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail_address">shkahov91@gmail.com</string>
    <string name="theme_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time_zero">00:00</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_name">Название песни</string>
    <string name="artist">Исполнитель</string>
    <string name="finish_playlist_creating">Завершить создание плейлиста?</string>
    <string name="you_might_loose_data">Все несохраненные данные будут потеряны</string>
    <string name="сancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_added">Трек уже добавлен в плейлист %s</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать инормацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="are_you_sure_deleting_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="are_you_sure_deleting_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="playlist_info">"%1$s \u00B7 %2$s"</string>
    <string name="there_are_no_tracks">В этом плейлисте нет треков</string>
    <string name="share_playlist_empty_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
</resources>
