<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    style="@style/MainBackgroundStyle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:text="@string/app_name"
        android:lineHeight="26dp"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/space_40">

        <Button
            android:id="@+id/search_button"
            android:layout_marginBottom="@dimen/main_button_margin_bottom"
            android:text="@string/search_button"
            app:icon="@drawable/ic_search_button"
            style="@style/MainButtonStyle"/>

        <Button
            android:id="@+id/media_button"
            android:text="@string/media_button"
            app:icon="@drawable/ic_media_button"
            style="@style/MainButtonStyle" />

        <Button
            android:id="@+id/settings_button"
            android:text="@string/settings_button"
            app:icon="@drawable/ic_settings_button"
            style="@style/MainButtonStyle"
            android:layout_marginBottom="28dp" />
    </LinearLayout>

</LinearLayout>