<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/space_24">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_vertical"
            android:paddingTop="@dimen/padding_top"
            android:paddingBottom="@dimen/space_16"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_16"
        android:paddingEnd="@dimen/space_9"
        android:theme="@style/SCBSwitchStyle"
        style="@style/SwitcherTextStyle"
        android:text="@string/night_theme" />

    <TextView
        android:id="@+id/share_app"
        style="@style/SettingsTextViewStyle"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/settings_margin_horizontal"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share_app" />

    <TextView
        android:id="@+id/support"
        style="@style/SettingsTextViewStyle"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/settings_margin_horizontal"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/terms_of_use"
        style="@style/SettingsTextViewStyle"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/settings_margin_horizontal"
        android:text="@string/terms_of_use"
        app:drawableEndCompat="@drawable/ic_arrow_forward" />

</LinearLayout>