<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/space_40">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_20"
            android:paddingLeft="@dimen/space_20"
            app:srcCompat="@drawable/ic_arrow_back"
            style="@style/BackButtonStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="28dp"
            android:paddingTop="14dp"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/night_theme"
            style="@style/SettingsTextViewStyle" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsTextViewStyle"
            android:text="@string/share_app" />

        <ImageButton
            android:id="@+id/share_app"
            style="@style/SettingsImageButtonStyle"
            app:srcCompat="@drawable/ic_share_app" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/support"
            style="@style/SettingsTextViewStyle" />

        <ImageButton
            android:id="@+id/support"
            style="@style/SettingsImageButtonStyle"
            app:srcCompat="@drawable/ic_support" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/terms_of_use"
            style="@style/SettingsTextViewStyle" />

        <ImageButton
            android:id="@+id/terms_of_use"
            style="@style/SettingsImageButtonStyle"
            app:srcCompat="@drawable/ic_arrow_forward" />

    </RelativeLayout>

</LinearLayout>