<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back_button"
        style="@style/BackButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24"
        android:layout_marginTop="@dimen/space_9"
        android:text="@string/new_playlist"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add_playlist_button"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginHorizontal="@dimen/space_24"
        android:layout_marginTop="@dimen/space_26"
        android:background="@drawable/playlist_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:srcCompat="@drawable/ic_add_playlist_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_playlist_button"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginTop="@dimen/space_32"
        android:hint="@string/playlist_name"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        app:hintTextAppearance="@style/AddPlaylistFieldStyle"
        style="@style/AddPlaylistTextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/ic_cursor"
            android:paddingHorizontal="@dimen/space_15"
            android:paddingVertical="@dimen/space_18"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_field"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginTop="@dimen/space_17"
        android:hint="@string/playlist_description"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        app:hintTextAppearance="@style/AddPlaylistFieldStyle"
        style="@style/AddPlaylistTextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_15"
            android:paddingVertical="@dimen/space_18"
            />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_playlist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_playlist"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:backgroundTint="@color/create_playlist_button_color"
        android:paddingVertical="@dimen/space_12"
        android:layout_marginHorizontal="@dimen/space_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/space_32"
        app:cornerRadius="@dimen/add_button_radius"
        android:enabled="false"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
