<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:paddingTop="@dimen/padding_top"
            android:paddingBottom="@dimen/space_16"
            android:text="@string/search_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/search_padding_horizontal"
        android:layout_marginBottom="@dimen/space_24">

        <EditText
            android:id="@+id/search_field"
            style="@style/SearchEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:drawableStart="@drawable/ic_search_button"
            android:drawablePadding="9dp"
            android:textCursorDrawable="@drawable/ic_cursor"
            android:hint="@string/search_button"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="13dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/ClearButtonStyle"
            android:layout_gravity="center|end"
            android:layout_width="@dimen/clear_button_size"
            android:layout_height="@dimen/clear_button_size"
            android:layout_marginEnd="@dimen/main_icon_padding"
            android:background="@color/transparent"
            android:src="@drawable/clear_text_button"
            android:visibility="gone"
            tools:visibility="visible"/>
    </FrameLayout>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/space_140"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/nothingFoundMessage"
        style="@style/PlaceHolderStyle"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/somethingWentWrong"
        style="@style/SomethingWentWrongStyle"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/refresh_button"
        style="@style/RefreshButtonStyle"
        tools:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history"
            android:layout_marginTop="@dimen/space_18"
            android:layout_marginBottom="@dimen/space_12"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/placeholder_text_size"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_weight="1"
            android:visibility="gone"
            tools:visibility="visible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_weight="25"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <Button
            android:id="@+id/clearHistory"
            style="@style/RefreshButtonStyle"
            android:layout_weight="1"
            android:text="@string/clear_history"
            tools:visibility="visible"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>
